[project]
name = "cert-host-scraper"
version = "0.0.0"
description = "Query the certificate transparency log from crt.sh by a given a keyword and returns the status code of the matched results. Optionally, filtering the results by status code."
authors = [{ name = "Malachi Soord", email = "inverse.chi@gmail.com" }]
requires-python = ">=3.10,<4"
readme = "README.md"
license = "MIT"
dependencies = [
    "requests>=2.27.1,<3",
    "click>=8.1.8,<9",
    "rich>=11,<15",
    "single-source>=0.4.0,<0.5",
]

[project.urls]
homepage = "https://github.com/inverse/cert-host-scraper"
repository = "https://github.com/inverse/cert-host-scraper"

[project.scripts]
cert-host-scraper = "cert_host_scraper.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8.3.5,<9",
    "pytest-cov>=7.0.0,<8",
    "pytest-socket>=0.7.0,<0.8",
    "vcrpy>=7.0.0,<8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
lint.ignore = ["E501"]

[tool.isort]
profile = "black"

[tool.pyright]
venvPath = "."
venv = ".venv"
