[project]
name = "cert-host-scraper"
version = "0.0.0"
description = "Query the certificate transparency log from crt.sh by a given a keyword and returns the status code of the matched results. Optionally, filtering the results by status code."
authors = [{ name = "Malachi Soord", email = "inverse.chi@gmail.com" }]
requires-python = ">=3.10,<4"
readme = "README.md"
license = "MIT"
dependencies = [
    "requests>=2.27.1,<3",
    "click>=8.1.8,<9",
    "rich>=11,<15",
    "single-source>=0.4.0,<0.5",
    "tenacity>=9.0.0,<10",
]

[project.urls]
homepage = "https://github.com/inverse/cert-host-scraper"
repository = "https://github.com/inverse/cert-host-scraper"

[project.scripts]
cert-host-scraper = "cert_host_scraper.cli:cli"

[dependency-groups]
dev = [
    "pytest>=9,<10",
    "pytest-cov>=7.0.0,<8",
    "pytest-socket>=0.7.0,<0.8",
    "vcrpy>=7.0.0,<8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py310"


[tool.ruff.lint]
select = [
    "F",    # Pyflakes (replaces flake8's core)
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "I",    # isort (import sorting)
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "UP",   # pyupgrade
    "PL",   # Pylint rules
    "RUF",  # Ruff-specific rules
]
ignore = [
    "E501",
    "PLR0913",
    "PLR2004",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
